# DeVIVO

./: README.md
mitrastar_scraper/: Cargo.toml  LICENSE-MIT  README.md
odi_autoconfig/: Cargo.toml  README.md
odi_autoconfig/src/: main.rs
vivo_scraper/: Cargo.toml  README.md
vivo_scraper/src/: main.rs
