[package]
name = "mitrastar_scraper"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.26", features = ["blocking", "cookies", "json", "rustls-tls"] }
scraper = "0.25.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
regex = "1.12.2"
md5 = "0.8.0"
rpassword = "7.4.0"
