[package]
name = "odi_autoconfig"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.26", features = [
    "blocking",
    "cookies",
    "json",
    "rustls-tls",
] }
scraper = "0.25.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
md5 = "0.8.0"
ssh2 = "0.9"
